--- a/assets/scss/frontend/maps.scss
+++ b/assets/scss/frontend/maps.scss
@@ -9,6 +9,7 @@
 .google-maps-builder {
   width: 100%;
   height: 500px;
+  min-height: 275px;
 }
 
 div[id^='google-maps-builder'] {
